--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,6 @@
  Custom bootstrap variables must be set or imported before bootstrap itself.
 */
 @import 'bootstrap';
+@import 'body';
+@import 'header';
 
