Update front end to display response from ICD-10 code lookup.
* New global styles to handle hidden/shown elements.
 * Bootstrap 4 drops support for hide/show.
* CodesController handles action to get ICD-10 code descriptions.
* New views to handle asynch display of descriptions.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
  Custom bootstrap variables must be set or imported before bootstrap itself.
 */
 @import 'bootstrap';
+@import 'global';
 @import 'body';
 @import 'header';
 
