Render NLM description data in formatted partial.

--- a/app/views/codes/description.html.erb
+++ b/app/views/codes/description.html.erb
@@ -15,10 +15,13 @@
   <% end %>
 </div>
 <div id="code-description-results">
-  <div class="cont__code-id-title hide">
-    <strong>Code:&nbsp;</strong><span class="cont__code-id"></span>
+  <div class="cont__code-id-title">
+    <h3>Code:&nbsp;</h3><span class="cont__code-id"></span>
   </div>
-  <div class="cont__description-header hide">
-    <strong>Diagnosis Description(s):&nbsp;</strong><span class="cont__code-description-text"></span>
+  <div class="cont__description-header">
+    <div>
+      <h3>Diagnosis Description(s):</h3>
+    <div>
+    <div class="cont__code-description-result"></div>
   </div>
 </div>
