--- a/app/views/codes/submit_code.js.erb
+++ b/app/views/codes/submit_code.js.erb
@@ -1,6 +1,6 @@
 $('.cont__code-id-title').show();
 $('.cont__code-id').html("<%= @code_description_presenter.code %>");
 $('.cont__description-header').show();
-// TODO: Create partial template in which to render each `:description`
-//  hash in the `descriptions` array.
-$('.cont__code-description-text').hide().html("<%= @code_description_presenter.descriptions.inspect %>").fadeIn('slow');
+$('.cont__code-description-result').hide().html(
+  "<%=  escape_javascript render(partial: 'description_data', collection: @code_description_presenter.descriptions, as: :description) %>"
+).fadeIn('slow');
