Create JS component to force external links to open in new tab.

--- a/app/views/codes/_description_data.html.erb
+++ b/app/views/codes/_description_data.html.erb
@@ -1,4 +1,4 @@
-<div class="cont_code-description">
+<div class="cont__code-description">
   <div>
     <em>Title:&nbsp;</em>
     <strong>
@@ -6,5 +6,5 @@
       (<%= link_to 'NLM Info Page', description[:link], target: '_blank', rel: 'external' %>)
     </strong>
   </div>
-  <div><em>Description:&nbsp;</em><%= description[:description].html_safe %></div>
+  <div class="cont__nlm-description"><em>Description:&nbsp;</em><%= description[:description].html_safe %></div>
 </div>
