--- a/app/views/codes/_description_data.html.erb
+++ b/app/views/codes/_description_data.html.erb
@@ -2,8 +2,10 @@
   <div>
     <em>Title:&nbsp;</em>
     <strong>
-      <%= description[:title] %>&nbsp;
-      (<%= link_to 'NLM Info Page', description[:link], target: '_blank', rel: 'external' %>)
+      <%= description[:title] %>
+      <% if description[:link].present? %>
+        &nbsp;&#124;&nbsp;<%= link_to 'NLM Info Page', description[:link], target: '_blank', rel: 'external' %>
+      <% end %>
     </strong>
   </div>
   <div class="cont__nlm-description"><em>Description:&nbsp;</em><%= description[:description].html_safe %></div>
