--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
  Custom bootstrap variables must be set or imported before bootstrap itself.
 */
 @import 'bootstrap';
+@import 'font-awesome';
 @import 'global';
 @import 'body';
 @import 'header';
