--- a/app/views/application/_header_nav.html.erb
+++ b/app/views/application/_header_nav.html.erb
@@ -1,15 +1,11 @@
 <nav  id="site-nav" class="navbar navbar-dark bg-inverse">
-  <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+  <%= link_to content_tag(:i, nil, class: 'fa fa-home'), root_path, class: 'navbar-brand' %>
   <ul class="nav navbar-nav">
-    <li class="nav-item active">
+    <li class="nav-item <%= active_class codes_path %>">
       <%= link_to 'Code Descriptions', codes_path, class: 'nav-link' %>
     </li>
-    <li class="nav-item">
+    <li class="nav-item <%= active_class about_path %>">
       <%= link_to 'About', about_path, class: 'nav-link' %>
     </li>
   </ul>
-  <!--<form class="form-inline pull-xs-right">
-    <input class="form-control" type="text" placeholder="Search">
-    <button class="btn btn-success-outline" type="submit">Search</button>
-  </form>-->
 </nav>
