--- a/app/views/application/_header_nav.html.erb
+++ b/app/views/application/_header_nav.html.erb
@@ -1,6 +1,8 @@
 <nav  id="site-nav" class="navbar navbar-dark bg-inverse">
-  <%= link_to content_tag(:i, nil, class: 'fa fa-home'), root_path, class: 'navbar-brand' %>
   <ul class="nav navbar-nav">
+    <li class="nav-item <%= 'active' if request.path == '/' %>">
+      <%= link_to content_tag(:i, nil, class: 'fa fa-home nav-link-home'), root_path, class: 'nav-link' %>
+    </li>
     <li class="nav-item <%= active_class codes_path %>">
       <%= link_to 'Code Descriptions', codes_path, class: 'nav-link' %>
     </li>
