--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 */
 @import 'bootstrap';
 @import 'font-awesome';
+@import 'bootstrap-overrides';
 @import 'global';
 @import 'body';
 @import 'header';
