Add bootstrap 4 containers to stylize spacing of nav and codes page.

--- a/app/views/codes/description.html.erb
+++ b/app/views/codes/description.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <div class="container m-b-2">
+  <div class="container m-b-2 p-l-2">
     <h2>Diagnosis Code Descriptions</h2>
     <p class="lead">
       Need to look up a description associated with an ICD-10 medical diagnosis code? Input the code below!
