--- a/app/views/codes/description.html.erb
+++ b/app/views/codes/description.html.erb
@@ -18,18 +18,17 @@
             class: 'form-control' %>
         </div>
       </div>
-      <%= submit_tag 'Fetch Code', class: 'btn btn-primary' %>
+      <%= submit_tag 'Fetch Code', class: 'btn btn-secondary' %>
     <% end %>
   </div>
   <div class="container">
     <div id="code-description-results">
-      <div class="cont__code-id-title">
-        <h3>Code:&nbsp;</h3><span class="cont__code-id"></span>
+      <div class="card cont__code-id-title hide">
+        <div class="card-header">
+          <h3><span class="cont__code-id"></span></h3>
+        </div>
       </div>
-      <div class="cont__description-header">
-        <div>
-          <h3>Diagnosis Description(s):</h3>
-        <div>
+      <div class="cont__description-body hide">
         <div class="cont__code-description-result"></div>
       </div>
     </div>
