Animate the appearance of each description card.

--- a/app/views/codes/_description_data.html.erb
+++ b/app/views/codes/_description_data.html.erb
@@ -1,4 +1,4 @@
-<div class="card-group">
+<div class="card-group hide">
   <div class="card <%= 'card-inverse card-inverse-borders' if description_counter.even? %>">
     <div class="card-block">
       <% if description[:link].present? %>
