--- a/app/views/codes/submit_code.js.erb
+++ b/app/views/codes/submit_code.js.erb
@@ -4,5 +4,6 @@ $('.cont__description-body').show();
 $('.cont__code-description-result').hide().html(
   "<%= escape_javascript render(partial: 'description_data', collection: @code_description_presenter.descriptions,
     as: :description, spacer_template: 'hr_spacer') %>"
-).fadeIn('slow');
+).fadeIn();
 DiagnosisCodeDemo.Code.openNLMLinksInNewTabs();
+DiagnosisCodeDemo.Code.toggleDescriptions();
