Stylize homepage with Bootstrap 4 jumbotron.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <div id="page-container">
       <%= render 'header' %>
-      <div id='content-container' class="p-l-2">
+      <div id='content-container'>
         <%= yield %>
       </div>
     </div>
