--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,18 @@
-<h1>MedlinePlus Connect API Demo</h1>
-<h2><em>Under Construction</em></h2>
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="display-3">MedlinePlus Connect API Demo</h1>
+    <p class="lead font-italic">A rubygem to connect you to the National Library of Medicine.</p>
+    <div class="container m-t-2">
+      <div class="row text-md-center">
+        <div class="col-md-4 bg-inverse text-warning text-uppercase">Under Construction</div>
+        <div class="col-md-4"><i class="fa fa-hospital-o"></i></div>
+        <div class="col-md-4 bg-info">Updated Regularly</div>
+      </div>
+    </div>
+    <hr class="m-y-2">
+    <p>Select a feature to explore.</p>
+    <p class="lead">
+      <%= link_to 'Diagnosis Codes', codes_path, role: 'button', class: 'btn btn-info btn-lg' %>
+    </p>
+  </div>
+</div>
