--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About this application...</h1>
-<p>This page will eventually contain text explaining what this application is about!</p>
+<div class="container p-x-2">
+  <h1>About this application...</h1>
+  <p>This page will eventually contain text explaining what this application is about!</p>
+</div>
