--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container p-x-2">
   <div class="jumbotron">
     <h1 class="display-3">MedlinePlus Connect API Demo</h1>
     <p class="lead font-italic">A rubygem to connect you to the National Library of Medicine.</p>
