--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Medical Diagnosis Codes</h1>
-<div>
-  <ul>
-    <li>
-      <%= link_to 'Get Code Descriptions', codes_description_path %>
-    </li>
-  </ul>
+<div class="container p-x-2">
+  <h1>Medical Diagnosis Codes</h1>
+  <div>
+    <ul>
+      <li>
+        <%= link_to 'Get Code Descriptions', codes_description_path %>
+      </li>
+    </ul>
+  </div>
 </div>
