Style updates for homepage.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,10 @@
 <div class="container p-x-2">
   <div class="jumbotron">
-    <h1 class="display-3">MedlinePlus Connect API Demo</h1>
+    <h1 class="display-3"><i class="fa fa-user-md"></i> MedlinePlusConnect Ruby</h1>
     <p class="lead font-italic">A rubygem to connect you to the National Library of Medicine.</p>
-    <div class="container m-t-2">
-      <div class="row text-md-center">
-        <div class="col-md-4 bg-inverse text-warning text-uppercase">Under Construction</div>
-        <div class="col-md-4"><i class="fa fa-hospital-o"></i></div>
-        <div class="col-md-4 bg-info">Updated Regularly</div>
-      </div>
-    </div>
+    <p>Under Construction <i class="fa fa-cogs" aria-hidden="true"></i></p>
     <hr class="m-y-2">
-    <p>Select a feature to explore.</p>
+    <p class="text-md-center">Select a feature to explore:</p>
     <p class="lead">
       <%= link_to 'Diagnosis Codes', codes_path, role: 'button', class: 'btn btn-info btn-lg' %>
     </p>
