Add more clear placeholder text to code lookup form.

--- a/app/views/codes/description.html.erb
+++ b/app/views/codes/description.html.erb
@@ -14,7 +14,7 @@
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon">Enter Code</div>
-          <%= text_field_tag 'diagnosis_code', nil, id: 'diagnosis-code', maxlength: 7, placeholder: 'ICD-10 Code',
+          <%= text_field_tag 'diagnosis_code', nil, id: 'diagnosis-code', maxlength: 7, placeholder: 'e.g. S11.12',
             class: 'form-control' %>
         </div>
       </div>
