--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container p-x-2">
-  <div class="jumbotron">
-    <h1 class="display-3"><i class="fa fa-user-md"></i> MedlinePlusConnect Ruby</h1>
+  <div class="jumbotron text-md-center">
+    <h1><i class="fa fa-user-md"></i> MedlinePlusConnect Ruby</h1>
     <p class="lead font-italic">A rubygem to connect you to the National Library of Medicine.</p>
     <p>Under Construction <i class="fa fa-cogs" aria-hidden="true"></i></p>
     <hr class="m-y-2">
-    <p class="text-md-center">Select a feature to explore:</p>
+    <p>Select a feature to explore:</p>
     <p class="lead">
       <%= link_to 'Diagnosis Codes', codes_path, role: 'button', class: 'btn btn-info btn-lg' %>
     </p>
