Add content to about page.

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,56 @@
 <div class="container p-x-2">
-  <h1>About this application...</h1>
-  <p>This page will eventually contain text explaining what this application is about!</p>
+  <div class="jumbotron text-md-center">
+    <h1><i class="fa fa-diamond"></i> A Rails 5 Rubygem Adventure</h1>
+    <p>Under Construction <i class="fa fa-cogs" aria-hidden="true"></i></p>
+  </div>
+  <div class="row">
+    <div class="cont__about-main col-sm-10 col-md-8">
+      <p>
+        Its time to check out Rails 5! This application is an experiment in Rails 5, a demo for an in-development
+        Rubygem, a brush up on RSpec 3.5, and an adventure with Bootstrap 4.
+      </p>
+      <p>
+        It allows a user to use medical diagnosis codes, such as
+        <a href="http://www.icd10data.com/ICD10CM/Codes" target="_blank">ICD-10 Codes</a>, and retrieve descriptive
+        information about the medical contexts associated with that diagnosis. More info TBD!
+      </p>
+    </div>
+    <div class="cont__about-side col-sm-2 col-md-4">
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fa fa-github"></i> Source Code</h4>
+          <p class="card-text">Check out the repository, or review the changelogs.</p>
+          <a href="https://github.com/stratigos/medline_plus_connect_demo" class="btn btn-primary" target="_blank">View Source</a>
+        </div>
+      </div>
+      <div class="card card-inverse card-inverse-borders">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fa fa-code-fork"></i> Rubygem Home</h4>
+          <p class="card-text">Coming soon! The Ruby library used to interface with the NLM API will be extracted to its own gem.</p>
+          <a href="https://rubygems.org/" class="btn btn-primary" target="_blank">View Gem</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fa fa-pencil"></i> My Blog</h4>
+          <p class="card-text">Read my technology rants, or résumé.</p>
+          <a href="http://techarchist.com/" class="btn btn-primary" target="_blank">Read More</a>
+        </div>
+      </div>
+      <div class="card card-inverse card-inverse-borders">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fa fa-twitter"></i> Bootstrap 4</h4>
+          <p class="card-text">Bootstrap 4 alpha is constantly changing. I hope I can keep up!</p>
+          <a href="https://v4-alpha.getbootstrap.com/" class="btn btn-primary" target="_blank">View TWBS</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fa fa-code"></i> jQuery</h4>
+          <p class="card-text">Becauce jQuery is the most reliable trend in JavaScript!</p>
+          <a href="https://github.com/stratigos/medline_plus_connect_demo" class="btn btn-primary" target="_blank">View jQuery</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
