Update about page to eliminate poorly scaling/responsive column classes.

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,7 +4,7 @@
     <p>Under Construction <i class="fa fa-cogs" aria-hidden="true"></i></p>
   </div>
   <div class="row">
-    <div class="cont__about-main col-sm-10 col-md-8">
+    <div class="cont__about-main col-sm-8">
       <p>
         Its time to check out Rails 5! This application is an experiment in Rails 5, a demo for an in-development
         Rubygem, a brush up on RSpec 3.5, and an adventure with Bootstrap 4.
@@ -15,7 +15,7 @@
         information about the medical contexts associated with that diagnosis. More info TBD!
       </p>
     </div>
-    <div class="cont__about-side col-sm-2 col-md-4">
+    <div class="cont__about-side col-sm-4">
       <div class="card">
         <div class="card-block">
           <h4 class="card-title"><i class="fa fa-github"></i> Source Code</h4>
